--- a/Admission.html
+++ b/Admission.html
@@ -4,10 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admission-Page</title>
+    <link rel="icon" type="image/x-icon" href="/img/image.png">
+    <title>DMRC-Admission </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Delius&family=Dosis:wght@232&family=Outfit:wght@100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="CSS/all-im.css">
     <link rel="stylesheet" href="CSS/admission.css">
 </head>
+<style>
+   
+</style>
 
 <body>
     <!-- === main page -->
@@ -16,7 +26,7 @@
         <!--=== header  ===-->
         <header class="header">
             <div class="header-left">
-                <h2 class="header-h2">School Name</h2>
+                <h2 class="header-h2">DMRC</h2>
             </div>
 
             <div class="menu-toggle" id="menuToggle">
@@ -26,9 +36,9 @@
             <div class="header-senter" id="headerMenu">
                 <ul class="header-ul">
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/About.html">About</a></li>
-                    <li><a href="#Program.html">Program</a></li>
-                    <li><a href="/Admission.html">Admission</a></li>
+                    <li><a href="/about.html">About</a></li>
+                    <li><a href="/Program.html">Program</a></li>
+                    <li><a href="#Admission.html">Admission</a></li>
                     <li><a href="/Contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -38,116 +48,158 @@
             </div>
         </header>
 
-
         <!--===  men  ===-->
         <main class="main">
-            <div class="main-left">
-                <p>Play. explore. learn.</p>
-                <h1>A safe and joyful place for your lovely children</h1>
-                <p>“We nurture curiosity and wonder so children grow with confidence, creativity, and a lifelong
-                    love of
-                    learning.”</p>
-                <div class="b">
-                    <a class="download-btn" href="img/DMRC Admission Form - Draft 2.pdf" download class="download-btn">
-                        Registration Form
-                    </a>
-                    <div class="rating">
-                        <span class="stars">★★★★★</span>
-                        <p class="source">4.8 rating on Google</p>
-                    </div>
-                </div>
-                <hr class="main-hr">
+            <div class="secntin-nain">
+                <b>Admission</b>
+                <h2>Ready to enroll?We hope to meet you soon</h2>
+                <b>Thank you for your interest in felis mauris quisque scelerisque, porta placerat pharetra, ac sodales
+                    vel vitae tincidunt mauris arcu placerat mi quis lorem parturient rutrum. </b>
                 <a href="tel:1234567890" class="call-link">
                     <i class="fa-solid fa-phone"></i>
                     (123) 456-7890
                 </a>
             </div>
-            <div class="main-right">
-                <img class="main-img1" src="/img/Dmrc Mothers Day/IMG_3216.jpeg" alt="">
-                <img class="main-img2" src="img/DMSRC Website/IMG_2585.jpg" alt="">
-            </div>
         </main>
-    </section>
+        <hr>
 
-    </main>
-    </section>
 
-    <!--======= page-section ===========   -->
-    <div class="page-section" id="about">
+        <!--======= page-section ===========   -->
+
 
         <!--=== section-1  ===-->
         <section class="section-1">
-
+            <b>The process</b>
+            <div class="section-1-div">
+                <div class="se-1-div-box">
+                    <h1>01</h1>
+                    <h3>Take a tour</h3>
+                    <p>Tortor sed nulla gravida ipsum aliquam consectetur neque odio dui turpis fringilla hac
+                        bibendum commodo proin quam posuere consequat.
+                    </p>
+                </div>
+                <div class="se-1-div-box">
+                    <h1>02</h1>
+                    <h3>Submit application</h3>
+                    <p>Tortor sed nulla gravida ipsum aliquam consectetur neque odio dui turpis fringilla hac
+                        bibendum commodo proin quam posuere consequat.
+                    </p>
+                </div>
+                <div class="se-1-div-box">
+                    <h1>03</h1>
+                    <h3>Meet and greet</h3>
+                    <p>Tortor sed nulla gravida ipsum aliquam consectetur neque odio dui turpis fringilla hac
+                        bibendum commodo proin quam posuere consequat.
+                    </p>
+                </div>
+                <div class="se-1-div-box">
+                    <h1>04</h1>
+                    <h3>Secure a spot</h3>
+                    <p>Tortor sed nulla gravida ipsum aliquam consectetur neque odio dui turpis fringilla hac
+                        bibendum commodo proin quam posuere consequat.
+                    </p>
+                </div>
+            </div>
         </section>
 
         <!--=== section-2  ===-->
         <section class="section-2">
+            <div class="section-2-div">
+                <img src="img/DMSRC Website/_MG_1259.jpg" alt="">
+                <img src="img/DMSRC Website/IMG_4848.jpg" alt="">
+            </div>
 
         </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </div><!--\\\\\\ page-section ////-->
-    <!-- === footer  === -->
-    <footer>
-        <section class="footer">
-            <div class="footer-up">
-                <div class="footer-left">
-                    <h4>Day Care</h4>
-                    <p>
-                        Quam quam lacus, amet lorem eu nunc, eget dui libero et faucibus facilisis sed odio suspendisse.
-                    </p>
-                    <ul class="footer-social">
-                        <li><a href="#"><i class="fab fa-youtube"></i> </a></li>
-                        <li><a href="#"><i class="fab fa-instagram"></i> </a></li>
-                        <li><a href="#"><i class="fab fa-facebook"></i> </a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i> </a></li>
-                    </ul>
-                </div>
-                <div class="footer-box-center">
-                    <h4>Quick Links</h4>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Admission</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="footer-box-center">
-                    <h4>Programs</h4>
-                    <ul>
-                        <li><a href="#">Half Day Care</a></li>
-                        <li><a href="#">Full Day Care</a></li>
-                        <li><a href="#">Special Events</a></li>
-                        <li><a href="#">Activities</a></li>
-                    </ul>
-                </div>
-                <div class="footer-right">
-                    <h4>Get in touch</h4>
-                    <address>
-                        Demo St, Brooklyn,<br>
-                        NY 11223, United States<br>
-                        +1 123-456-7890<br>
-                        <a href="mailto:mail@example.com">mail@example.com</a>
-                    </address>
-                </div>
+        <!-- === section-3 === -->
+        <section class="section-3">
+            <div class="section-3-up">
+                <h2>Required enrollment documents</h2>
+                <p>Pulvinar ultrices porta mattis quis lobortis est facilisis purus nunc, sed semper enim dictum sed
+                    donec condimentum sodales sed non vel malesuada morbi arcu justo, pretium sagittis hac nisi amet,
+                    fermentum nunc.</p>
+                <a href="">Enroll your kid</a>
+            </div>
+            <div class="section-3-down">
+                <hr>
+                <ul>
+                    <li>✔️Policies and procedures review form</li>
+                    <li>✔️Day care financial agreement</li>
+                    <li>✔️Emergency medical authorization</li>
+                    <li>✔️USDA child enrollment form</li>
+                    <li>✔️Development history</li>
+                    <li>✔️Proof of birth</li>
+                </ul>
             </div>
         </section>
-        <hr class="footer-hr">
-        <div class="footer-down">
-            <p>&copy; 2025 Day Care Services. Powered by Day Care Services.</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </section>
+
+     <!-- === footer  === -->
+    <footer>
+      <section class="footer">
+        <div class="footer-up">
+          <div class="footer-left">
+            <h4>DMRC</h4>
+            <p>
+              DMRC provides a nurturing Montessori environment where children develop independence, curiosity, and a
+              love
+              for learning.
+
+            </p>
+            <ul class="footer-social">
+              <li><a href="#"><i class="fab fa-youtube"></i> </a></li>
+              <li><a href="#"><i class="fab fa-instagram"></i> </a></li>
+              <li><a href="#"><i class="fab fa-facebook"></i> </a></li>
+              <li><a href="#"><i class="fab fa-twitter"></i> </a></li>
+            </ul>
+          </div>
+          <div class="footer-box-center">
+            <h4>Quick Links</h4>
+            <ul>
+              <li><a href="/index.html">Home</a></li>
+              <li><a href="/about.html">About Us</a></li>
+              <li><a href="#">Admission</a></li>
+              <li><a href="/Contact.html">Contact</a></li>
+            </ul>
+          </div>
+          <div class="footer-box-center">
+            <h4>Programs</h4>
+            <ul>
+              <li><a href="#">Half Day Care</a></li>
+              <li><a href="#">Full Day Care</a></li>
+              <li><a href="#">Special Events</a></li>
+              <li><a href="#">Activities</a></li>
+            </ul>
+          </div>
+          <div class="footer-right">
+            <h4>Get in touch</h4>
+            <address>
+              Demo St, Brooklyn,<br>
+              NY 11223, United States<br>
+              +1 123-456-7890<br>
+              <a href="mailto:mail@example.com">mail@example.com</a>
+            </address>
+          </div>
         </div>
+      </section>
+      <hr class="footer-hr">
+      <div class="footer-down">
+        <p>&copy; 2025 DMRC. Powered by DMRC.</p>
+      </div>
     </footer>
 
 </body>
