--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/img/image.png">
-    <title>About</title>
+    <title>DMRC-About</title>
     <!--  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Delius&family=Dosis:wght@232&family=Outfit:wght@100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <link rel="stylesheet" href="CSS/about.css">
     <link rel="stylesheet" href="CSS/all-im.css">
 </head>
@@ -37,7 +38,7 @@
             <div class="header-senter" id="headerMenu">
                 <ul class="header-ul">
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="#About.html">About</a></li>
+                    <li><a href="#">About</a></li>
                     <li><a href="/Program.html">Program</a></li>
                     <li><a href="/Admission.html">Admission</a></li>
                     <li><a href="/Contact.html">Contact</a></li>
@@ -318,10 +319,10 @@
                 <div class="footer-box-center">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="/index.html">Home</a></li>
                         <li><a href="#">About Us</a></li>
-                        <li><a href="#">Admission</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="/Admission.html">Admission</a></li>
+                        <li><a href="/Contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-box-center">
