--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
             <h4>Quick Links</h4>
             <ul>
               <li><a href="#">Home</a></li>
-              <li><a href="/About.html">About Us</a></li>
+              <li><a href="/about.html">About Us</a></li>
               <li><a href="/Admission.html">Admission</a></li>
               <li><a href="/Contact.html">Contact</a></li>
             </ul>
