--- a/Admission.html
+++ b/Admission.html
@@ -12,8 +12,8 @@
         href="https://fonts.googleapis.com/css2?family=Delius&family=Dosis:wght@232&family=Outfit:wght@100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="CSS/all-im.css">
-    <link rel="stylesheet" href="CSS/admission.css">
+    <link rel="stylesheet" href="p-CSS/all-im.css">
+    <link rel="stylesheet" href="p-CSS/admission.css">
 </head>
 <style>
    
