--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-    <link rel="stylesheet" href="CSS/about.css">
-    <link rel="stylesheet" href="CSS/all-im.css">
+    <link rel="stylesheet" href="p-CSS/about.css">
+    <link rel="stylesheet" href="p-CSS/all-im.css">
 </head>
 
 <body>
