--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     href="https://fonts.googleapis.com/css2?family=Delius&family=Dosis:wght@232&family=Outfit:wght@100..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="CSS/style.css">
-  <link rel="stylesheet" href="CSS/all-im.css">
+  <link rel="stylesheet" href="P-CSS/style.css">
+  <link rel="stylesheet" href="p-CSS/all-im.css">
 </head>
 
 <style>
@@ -32,7 +32,7 @@
       <div class="header-left">
         <h2 class="header-h2">
           <img src="/img/image.png" alt="">DMRC
-        </h2>
+        </h2>+
       </div>
 
 
