--- a/github/index.html
+++ b/github/index.html
@@ -179,15 +179,15 @@
                     <td><strong><a class="php" href="https://github.com/susheelcoder">view</a></strong>
                     </td>
                 </tr>
-                <!-- <tr>
+                <tr>
                     <td>2</td>
-                    <td>name</td>
-                    <td>Project work</td>
+                    <td>Kamal Joshi</td>
+                    <td>html css</td>
                     <td>26-9-2025</td>
                     <td >0-0-2025</td>
-                    <td><strong><a class="php" href="/">view</a></strong>
+                    <td><strong><a class="php" href="https://github.com/kamaljoshi2645">view</a></strong>
                     </td>
-                </tr> -->
+                </tr>
 
             </tbody>
             <tfoot>
