--- a/github/index.html
+++ b/github/index.html
@@ -197,6 +197,79 @@
             </tfoot>
         </table>
     </fieldset>
+
+
+
+
+
+    <ul>
+  <li>Precious Moments Safaris
+    <ul>
+      <li>folder - github</li>
+      <li>folder - CSS</li>
+      <li>folder - JS</li>
+      <li>index.html</li>
+      <li>our-story.html</li>
+      <li>experiences.html</li>
+      <li>destinations.html</li>
+      <li>about.html</li>
+      <li>contact.html</li>
+      <li>Book-Today.html</li>
+      <li>booking.html</li>
+
+      <li>folder - Explore More Details
+        <ul>
+          <li>folder - CSS</li>
+          <li>folder - JS</li>
+          <li>01-Day-name.html</li>
+          <li>02-Day-name.html</li>
+          <li>03-Day-name.html</li>
+          <li>04-Day-name.html</li>
+          <li>05-Day-name.html</li>
+          <li>06-Day-name.html</li>
+          <li>07-Day-name.html</li>
+          <li>08-Day-name.html</li>
+          <li>09-Day-name.html</li>
+          <li>10-Day-name.html</li>
+          <li>11-Day-name.html</li>
+          <li>12-Day-name.html</li>
+        </ul>
+      </li>
+
+      <li>folder - Explore Our National Parks
+        <ul>
+          <li>folder - CSS</li>
+          <li>folder - JS</li>
+          <li>Serengeti.html</li>
+          <li>Saadani.html</li>
+          <li>Katavi.html</li>
+          <li>Mahale.html</li>
+          <li>Ngorongoro.html</li>
+          <li>Zanzibar.html</li>
+          <li>Lake.html</li>
+          <li>Tarangire.html</li>
+          <li>Nyerere.html</li>
+          <li>Ruaha.html</li>
+        </ul>
+      </li>
+
+      <li>folder - QUICK LINKS
+        <ul>
+          <li>folder - CSS</li>
+          <li>folder - JS</li>
+          <li>Top-Safari-Packages.html</li>
+          <li>Mount-Kilimanjaro-Treks.html</li>
+          <li>Zanzibar-Holidays.html</li>
+          <li>Travel-Guide.html</li>
+          <li>Terms-&-Conditions.html</li>
+          <li>Payment-and-Refund-policy.html</li>
+          <li>FAQs.html</li>
+        </ul>
+      </li>
+    </ul>
+  </li>
+</ul>
+
 </body>
 
 </html>
