--- a/github/index.html
+++ b/github/index.html
@@ -136,7 +136,7 @@
                     <td>1</td>
                     <td>Precious Moments Safaris</td>
                     <td><a class="html" href="/">live</a></td>
-                    <td>26-9-2025</td>
+                    <td>25-9-2025</td>
                     <td><strong><a class="php" href="https://github.com/susheelcoder/project-2025">view</a></strong>
                     </td>
                 </tr>
@@ -174,8 +174,8 @@
                     <td>1</td>
                     <td>susheel kumar</td>
                     <td>Project Lead</td>
-                    <td>26-9-2025</td>
-                    <td id="liveTime">26-9-2025</td>
+                    <td>25-9-2025</td>
+                    <td id="liveTime">0-9-2025</td>
                     <td><strong><a class="php" href="https://github.com/susheelcoder">view</a></strong>
                     </td>
                 </tr>
@@ -183,7 +183,7 @@
                     <td>2</td>
                     <td>Kamal Joshi</td>
                     <td>html css</td>
-                    <td>26-9-2025</td>
+                    <td>25-9-2025</td>
                     <td >0-0-2025</td>
                     <td><strong><a class="php" href="https://github.com/kamaljoshi2645">view</a></strong>
                     </td>
@@ -206,6 +206,7 @@
   <li>Precious Moments Safaris
     <ul>
       <li>folder - github</li>
+      <li>folder - img/video</li>
       <li>folder - CSS</li>
       <li>folder - JS</li>
       <li>index.html</li>
