--- a/index.html
+++ b/index.html
@@ -9,18 +9,214 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="style.css" />
 </head>
+<style>
+  /* HERO & VIDEO */
+
+
+  .bg-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    z-index: -1;
+  }
+
+  /* NAVIGATION */
+  nav {
+    padding: 2vw 4vw;
+    width: 100%;
+    display: flex;
+    position: fixed;
+    z-index: 100;
+    background: rgba(0, 0, 0, 0.3);
+    justify-content: space-evenly;
+  }
+
+  .logo {
+    width: 120px;
+    height: auto;
+  }
+
+  #nav-part2 {
+    display: flex;
+    align-items: center;
+    gap: 1vw;
+  }
+
+  #nav-part2 h4 {
+    padding: 10px 20px;
+    border: 1px solid #ffffff3c;
+    border-radius: 50px;
+    font-weight: 500;
+    color: #ffffffd4;
+    transition: all ease 0.4s;
+    position: relative;
+    font-size: 18px;
+    overflow: hidden;
+    cursor: pointer;
+  }
+
+  #nav-part2 h4::after {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: #d4a94f;
+    left: 0;
+    bottom: -100%;
+    border-radius: 50%;
+    transition: all ease 0.4s;
+    z-index: 1;
+  }
+
+  #nav-part2 h4:hover::after {
+    bottom: 0;
+    border-radius: 0;
+  }
+
+  #nav-part2 h4 a {
+    color: #fff;
+    text-decoration: none;
+    position: relative;
+    z-index: 9;
+  }
+
+  .btn-top {
+    background-color: #d4a94f;
+    padding: 10px 20px;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    border-radius: 3px;
+  }
+
+  /* HERO CONTENT */
+  .hero-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
+    padding: 20px;
+  }
+
+  .hero-content h1 {
+    font-size: 3em;
+    font-weight: bold;
+    max-width: 900px;
+    margin: auto;
+    line-height: 1.3;
+    font-family: 'Lagency', serif;
+  }
+
+  .btn-main {
+    display: inline-block;
+    margin-top: 20px;
+    background-color: #d4a94f;
+    padding: 15px 30px;
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 4px;
+  }
+
+  /* HAMBURGER 3 DOTS */
+  .hamburger {
+    display: none;
+    flex-direction: column;
+    gap: 5px;
+    cursor: pointer;
+    z-index: 101;
+  }
+
+  .hamburger span {
+    width: 16px;
+    height: 2px;
+    background: #fff;
+    display: block;
+    border-radius: 50%;
+  }
+
+  @media (max-width: 768px) {
+
+    nav {
+      display: flex;
+      position: fixed;
+      flex-direction: row;
+    }
+
+    .hamburger {
+      display: flex;
+      margin-left: auto;
+      margin-top: 15px;
+    }
+
+    #nav-part2 {
+      position: fixed;
+      top: 0;
+      right: -200px;
+      width: 180px;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.95);
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 80px 15px 20px;
+      gap: 10px;
+      transition: right 0.3s ease;
+      z-index: 100;
+    }
+
+    #nav-part2.active {
+      right: 0;
+    }
+
+    #nav-part2 h4 {
+      width: 100%;
+      text-align: left;
+      padding: 10px 0;
+      border: none;
+      font-size: 16px;
+    }
+
+    .desktop-btn {
+      display: none;
+    }
+
+    .mobile-btn {
+      display: inline-block;
+      margin-top: 20px;
+      background-color: #d4a94f;
+      padding: 10px 15px;
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      border-radius: 3px;
+      width: 100%;
+      text-align: center;
+    }
+  }
+</style>
 
 <body>
   <div id="main">
     <div class="hero">
       <video autoplay muted loop playsinline class="bg-video">
-        <source src=" ./Untitled video - Made with Clipchamp (6).mp4" type="video/mp4" />
+        <source src="./Untitled video - Made with Clipchamp (6).mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
 
-
       <nav>
         <img src="./Logo-light.png" alt="Logo" class="logo" />
+
+        <!-- 3 dots hamburger -->
+        <div class="hamburger" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
 
         <div id="nav-part2">
           <h4><a href="index.html">HOME</a></h4>
@@ -29,9 +225,9 @@
           <h4><a href="destination.html">DESTINATIONS</a></h4>
           <h4><a href="about.html">ABOUT US</a></h4>
           <h4><a href="contact.html">CONTACT US</a></h4>
+          <a href="tailor made safari.html" class="btn-top mobile-btn">TAILOR MADE SAFARIS</a>
         </div>
 
-        <a href="tailor made safari.html" class="btn-top">TAILOR MADE SAFARIS</a>
       </nav>
 
       <div class="hero-content">
@@ -41,6 +237,10 @@
     </div>
 
 
+
+
+
+
     <div id="page4">
       <div id="page4-left">
         <img src="./images/about-home-800x725.jpeg" alt="">
@@ -48,8 +248,8 @@
       <div id="page4-right">
         <h2>About Us</h2>
         <h1>Embark on an Unforgettable Safari Adventure in Tanzania & Zanzibar</h1>
-        <p>We offer authentic Tanzania and Zanzibar safari experiences that leave a positive impact. Enjoy a wide range
-          of unique, high-quality safaris curated to meet your every need.</p>
+        <p>We offer authentic Tanzania and Zanzibar safari experiences that leave a positive impact. Enjoy a
+          wide range of unique, high-quality safaris curated to meet your every need.</p>
         <a href="about.html" class="btn-main">Learn More</a>
       </div>
     </div>
@@ -91,20 +291,20 @@
         <div class="value-item">
           <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" alt="Mission Icon" />
           <h2>Mission</h2>
-          <p>To curate authentic and memorable experiences in Tanzania and Zanzibar leaving a positive impact on
-            Travellers, Local communities, and the environment.</p>
+          <p>To curate authentic and memorable experiences in Tanzania and Zanzibar leaving a positive impact
+            on Travellers, Local communities, and the environment.</p>
         </div>
         <div class="value-item">
           <img src="https://cdn-icons-png.flaticon.com/512/535/535239.png" alt="Vision Icon" />
           <h2>Vision</h2>
-          <p>Leading the way in providing transformative safari journeys and highlight the beauty and the culture of
-            Tanzania & Zanzibar, to create lasting memories for all guests.</p>
+          <p>Leading the way in providing transformative safari journeys and highlight the beauty and the
+            culture of Tanzania & Zanzibar, to create lasting memories for all guests.</p>
         </div>
         <div class="value-item">
           <img src="https://cdn-icons-png.flaticon.com/512/1077/1077012.png" alt="Values Icon" />
           <h2>Values</h2>
-          <p>Creating authentic experiences that embody the spirit of Tanzania and Zanzibar, while fostering responsible
-            tourism for environmental preservation and community empowerment.</p>
+          <p>Creating authentic experiences that embody the spirit of Tanzania and Zanzibar, while fostering
+            responsible tourism for environmental preservation and community empowerment.</p>
         </div>
       </div>
     </section>
@@ -180,8 +380,9 @@
           <img src="https://static.tacdn.com/img2/brand_refresh_2025/logos/wordmark.svg" class="trip-icon"
             alt="TripAdvisor" />
           <p class="testimonial-text">
-            <strong>10/10 Girls Trip, Amazing Experience</strong> - Thank you Precious Moments. The whole itinerary was
-            an absolute dream and we felt so safe as ladies... <span style="color: orange;">read more</span>
+            <strong>10/10 Girls Trip, Amazing Experience</strong> - Thank you Precious Moments. The whole
+            itinerary was an absolute dream and we felt so safe as ladies... <span style="color: orange;">read
+              more</span>
           </p>
           <div class="testimonial-footer">
 
@@ -199,8 +400,8 @@
           <img src="https://static.tacdn.com/img2/brand_refresh_2025/logos/wordmark.svg" class="trip-icon"
             alt="TripAdvisor" />
           <p class="testimonial-text">
-            <strong>A Bucket List Trip To Tanzania!!</strong> Myself and 10 friends organised our dream trip... <span
-              style="color: orange;">read more</span>
+            <strong>A Bucket List Trip To Tanzania!!</strong> Myself and 10 friends organised our dream
+            trip... <span style="color: orange;">read more</span>
           </p>
           <div class="testimonial-footer">
 
@@ -218,8 +419,8 @@
           <img src="https://static.tacdn.com/img2/brand_refresh_2025/logos/wordmark.svg" class="trip-icon"
             alt="TripAdvisor" />
           <p class="testimonial-text">
-            <strong>To The Roof Of Africa</strong> - I would highly recommend Precious Moments Safari’s... <span
-              style="color: orange;">read more</span>
+            <strong>To The Roof Of Africa</strong> - I would highly recommend Precious Moments Safari’s...
+            <span style="color: orange;">read more</span>
           </p>
           <div class="testimonial-footer">
 
@@ -237,32 +438,32 @@
 
         <div class="accordion-item">
           <div class="accordion-title">Consultation <span>+</span></div>
-          <div class="accordion-content">We will start by getting to know you. What excites you? What are your must-see
-            destinations? What’s your preferred place of travel?</div>
+          <div class="accordion-content">We will start by getting to know you. What excites you? What are your
+            must-see destinations? What’s your preferred place of travel?</div>
         </div>
 
         <div class="accordion-item">
           <div class="accordion-title">Tailored Activities <span>+</span></div>
-          <div class="accordion-content">We customize your itinerary with thrilling or relaxing activities to match your
-            travel style and goals.</div>
+          <div class="accordion-content">We customize your itinerary with thrilling or relaxing activities to
+            match your travel style and goals.</div>
         </div>
 
         <div class="accordion-item">
           <div class="accordion-title">Accommodations: <span>+</span></div>
-          <div class="accordion-content">From budget camps to luxury lodges, we find the perfect stay that suits your
-            comfort level.</div>
+          <div class="accordion-content">From budget camps to luxury lodges, we find the perfect stay that
+            suits your comfort level.</div>
         </div>
 
         <div class="accordion-item">
           <div class="accordion-title">Expert Guidance <span>+</span></div>
-          <div class="accordion-content">Local experts will help you throughout your journey to ensure everything goes
-            smoothly.</div>
+          <div class="accordion-content">Local experts will help you throughout your journey to ensure
+            everything goes smoothly.</div>
         </div>
 
         <div class="accordion-item">
           <div class="accordion-title">Flexible Itineraries: <span>+</span></div>
-          <div class="accordion-content">Your plans can adapt as you go. We build in flexibility so you never feel
-            rushed.</div>
+          <div class="accordion-content">Your plans can adapt as you go. We build in flexibility so you never
+            feel rushed.</div>
         </div>
 
         <div class="faq-link">
@@ -328,8 +529,8 @@
       <div class="tailor-overlay">
         <div class="tailor-content">
           <h1>Tailor Made Safari for You</h1>
-          <p>Contact us for a personalised quote, whether you are travelling solo, with friends, as a couple, or with
-            family.</p>
+          <p>Contact us for a personalised quote, whether you are travelling solo, with friends, as a couple,
+            or with family.</p>
         </div>
         <a href="contact.html" class="book-button">Book Today</a>
       </div>
@@ -340,8 +541,8 @@
       <div class="footer-container">
         <div class="footer-col logo-col">
           <img src="./Logo-light.png" alt="Logo" class="footer-logo" />
-          <p>We offer authentic Tanzania and Zanzibar safari experiences that leave a positive impact. Enjoy a wide
-            range of unique, high-quality safaris curated to meet your every need.</p>
+          <p>We offer authentic Tanzania and Zanzibar safari experiences that leave a positive impact. Enjoy a
+            wide range of unique, high-quality safaris curated to meet your every need.</p>
         </div>
 
         <div class="footer-col">
