--- a/page14.html
+++ b/page14.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="page14.css" />
+  <link rel="stylesheet" href="CSS/mobile.css" />
   <style>
      * {
   margin: 0;
@@ -720,6 +721,11 @@ details ul li::before {
       </video>
       <nav>
         <img src=" ./Logo-Main-768x330.png " alt="Logo" class="logo" />
+        <div class="hamburger" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
         <div id="nav-part2">
           <h4><a href="index.html">HOME</a></h4>
           <h4><a href="ourstory.html">OUR STORY</a></h4>
@@ -727,8 +733,9 @@ details ul li::before {
           <h4><a href="destination.html">DESTINATIONS</a></h4>
           <h4><a href="about.html">ABOUT US</a></h4>
           <h4><a href="contact.html">CONTACT US</a></h4>
+           <a href="tailor made safari.html" class="btn-top">TAILOR MADE SAFARIS</a>
         </div>
-        <a href="tailor made safari.html" class="btn-top">TAILOR MADE SAFARIS</a>
+       
       </nav>
       <div class="hero-content">
         <h1>10-Day Luxury Safari & Zanzibar Beach Package</h1>
