--- a/page17.html
+++ b/page17.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="page17.css" />
+  <link rel="stylesheet" href="CSS/mobile.css" />
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -466,6 +467,11 @@
       </video>
       <nav>
         <img src=" ./Logo-Main-768x330.png " alt="Logo" class="logo" />
+        <div class="hamburger" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
         <div id="nav-part2">
           <h4><a href="index.html">HOME</a></h4>
           <h4><a href="ourstory.html">OUR STORY</a></h4>
@@ -473,8 +479,9 @@
           <h4><a href="destination.html">DESTINATIONS</a></h4>
           <h4><a href="about.html">ABOUT US</a></h4>
           <h4><a href="contact.html">CONTACT US</a></h4>
-        </div>
+          
         <a href="tailor made safari.html" class="btn-top">TAILOR MADE SAFARIS</a>
+        </div>
       </nav>
       <div class="hero-content">
         <h1>6-Day Luxury Safari Package</h1>
