--- a/he.html
+++ b/he.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Filter Your Experience</title>
   <link rel="stylesheet" href="he.css" />
+  <link rel="stylesheet" href="CSS/mobile.css" />
 </head>
 <body>
 
