--- a/ourstory.html
+++ b/ourstory.html
@@ -24,6 +24,11 @@
 
         <nav>
           <img src="./Logo-light.png" alt="Logo" class="logo" />
+          <div class="hamburger" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
 
 
           <div id="nav-part2">
@@ -33,9 +38,10 @@
             <h4><a href="destination.html">DESTINATIONS</a></h4>
             <h4><a href="about.html">ABOUT US</a></h4>
             <h4><a href="contact.html">CONTACT US</a></h4>
+            
+          <a href="tailor made safari.html" class="btn-top">TAILOR MADE SAFARIS</a>
           </div>
 
-          <a href="tailor made safari.html" class="btn-top">TAILOR MADE SAFARIS</a>
         </nav>
         <div class="hero-content">
           <h1>Our Story: Experience Built on Passion and Place.</h1>
