--- a/page2.html
+++ b/page2.html
@@ -7,6 +7,7 @@
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="page2.css" />
+  <link rel="stylesheet" href="CSS/mobile.css" />
 </head>
 <body>
   <div id="main">
@@ -19,6 +20,11 @@
 
       <nav>
         <img src=" ./Logo-Main-768x330.png " alt="Logo" class="logo" />
+        <div class="hamburger" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
 
         <div id="nav-part2">
           <h4><a href="index.html">HOME</a></h4>
@@ -27,9 +33,10 @@
           <h4><a href="destination.html">DESTINATIONS</a></h4>
           <h4><a href="about.html">ABOUT US</a></h4>
           <h4><a href="contact.html">CONTACT US</a></h4>
+          
+        <a href="tailor made safari.html" class="btn-top">TAILOR MADE SAFARIS</a>
         </div>
 
-        <a href="tailor made safari.html" class="btn-top">TAILOR MADE SAFARIS</a>
       </nav>
 
       <div class="hero-content">
