--- a/refund.html
+++ b/refund.html
@@ -7,6 +7,7 @@
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="refund.css" />
+  <link rel="stylesheet" href="CSS/mobile.css" />
 </head>
 <body>
 <style>
@@ -64,9 +65,10 @@
           <h4><a href="destination.html">DESTINATIONS</a></h4>
           <h4><a href="about.html">ABOUT US</a></h4>
           <h4><a href="contact.html">CONTACT US</a></h4>
+          
+        <a href="tailor made safari.html" class="btn-top">TAILOR MADE SAFARIS</a>
         </div>
 
-        <a href="tailor made safari.html" class="btn-top">TAILOR MADE SAFARIS</a>
       </nav>
 
       <div class="hero-content">
