--- a/terms.html
+++ b/terms.html
@@ -7,6 +7,7 @@
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="terms.css" />
+  <link rel="stylesheet" href="CSS/mobile.css" />
 </head>
 <body>
 <style>
@@ -64,6 +65,11 @@
 
       <nav>
         <img src="./Logo-light.png" alt="Logo" class="logo" />
+        <div class="hamburger" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
 
         <div id="nav-part2">
           <h4><a href="index.html">HOME</a></h4>
@@ -72,9 +78,10 @@
           <h4><a href="destination.html">DESTINATIONS</a></h4>
           <h4><a href="about.html">ABOUT US</a></h4>
           <h4><a href="contact.html">CONTACT US</a></h4>
+          
+        <a href="tailor made safari.html" class="btn-top">TAILOR MADE SAFARIS</a>
         </div>
 
-        <a href="tailor made safari.html" class="btn-top">TAILOR MADE SAFARIS</a>
       </nav>
 
       <div class="hero-content">
