--- a/ourstory.html
+++ b/ourstory.html
@@ -13,6 +13,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="ourstory.css" />
+    <link rel="stylesheet" href="CSS/mobile.css">
   </head>
   <body>
     <div id="main">
@@ -83,7 +84,7 @@
           </div>
         </div>
       </div>
-<ody>
+<body>
 
   <div class="photo-card">
     <img src="./WhatsApp Image 2025-06-24 at 03.14.24_00d779b3.jpg" alt="Family by the lake">
@@ -210,5 +211,6 @@
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
+    
   </body>
 </html>
