--- a/Nyerere.html
+++ b/Nyerere.html
@@ -14,7 +14,7 @@
   <div id="main">
     <div class="hero">
       <video autoplay muted loop playsinline class="bg-video">
-  <source src=" " type="video/mp4" />
+  <source src="/18390675-hd_1920_1080_60fps.mp4 " type="video/mp4" />
   Your browser does not support the video tag.
 </video>
 
@@ -122,7 +122,7 @@ Aside from its unmatched landscapes, Nyerere National Park is home to some of th
     </section>
   <section class="activities-section">
     <div class="activity">
-      <img src="   ./images/sample-serengeti-2-890x664.jpg  " alt="Game Drives">
+      <img src="./images/sample-serengeti-2-890x664.jpg" alt="Game Drives">
       <div class="content">
         <h3>Game Drives</h3>
         <p>Game drives are one of the most popular activities in Nyerere National Park. Guests can explore the vast wilderness on guided drives, spotting a variety of wildlife, including elephants, lions, leopards, and wild dogs. With a range of habitats, from open savannahs to dense forests, these drives provide excellent opportunities to see both iconic and rare species.</p>
