--- a/Kilimanjaro Climb.html
+++ b/Kilimanjaro Climb.html
@@ -14,7 +14,7 @@
   <div id="main">
     <div class="hero">
       <video autoplay muted loop playsinline class="bg-video">
-  <source src=" ./PreciousmomentsElephantVideo (2).mp4   " type="video/mp4" />
+  <source src="./PreciousmomentsElephantVideo (2).mp4"type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
@@ -28,16 +28,14 @@
         </div>
 
         <div id="nav-part2">
-          <h4><a href="index.html1">HOME</a></h4>
+          <h4><a href="index.html">HOME</a></h4>
           <h4><a href="ourstory.html">OUR STORY</a></h4>
           <h4><a href="#">EXPERIENCES</a></h4>
           <h4><a href="#">DESTINATIONS</a></h4>
           <h4><a href="#">ABOUT US</a></h4>
           <h4><a href="contact.html">CONTACT US</a></h4>
-          
-        <a href="tailor made safari.html" class="btn-top">TAILOR MADE SAFARIS</a>
+           <a href="tailor made safari.html" class="btn-top">TAILOR MADE SAFARIS</a>
         </div>
-
       </nav>
 
       <div class="hero-content">
