--- a/Ngorongoro.html
+++ b/Ngorongoro.html
@@ -14,7 +14,7 @@
   <div id="main">
     <div class="hero">
       <video autoplay muted loop playsinline class="bg-video">
-  <source src=" " type="video/mp4" />
+  <source src=" type="video/mp4" />
   Your browser does not support the video tag.
 </video>
 
