--- a/ourstory.html
+++ b/ourstory.html
@@ -13,6 +13,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="ourstory.css" />
+    <link rel="stylesheet" href="CSS/mobile.css"/>
   </head>
   <body>
     <div id="main">
@@ -110,7 +111,7 @@
     <p>Green grass days</p>
   </div>
 
-</ody>
+</body>
 
 
   
