--- a/index.html
+++ b/index.html
@@ -350,35 +350,36 @@
           <p>We offer authentic Tanzania and Zanzibar safari experiences that leave a positive impact. Enjoy a wide
             range of unique, high-quality safaris curated to meet your every need.</p>
         </div>
+        <div class="foo">
+          <div class="footer-col">
+            <h3>DESTINATIONS</h3>
+            <ul>
+              <li><a href="artic.html">Serengeti National Park</a></li>
+              <li><a href="Ngorongoro.html">Ngorongoro Crater</a></li>
+              <li><a href="Tarangire.html">Tarangire National Park</a></li>
+              <li><a href="lake.html">Lake Manyara</a></li>
+              <li><a href="saadani.html">Saadani National Park</a></li>
+              <li><a href="kat.html">Katavi National Park</a></li>
+              <li><a href="mahela.html">Mahela National Park</a></li>
+              <li><a href="Nyerere.html">Nyerere National Park</a></li>
+              <li><a href="Zanzibar.html">Zanzibar Island</a></li>
+            </ul>
+          </div>
 
-        <div class="footer-col">
-          <h3>DESTINATIONS</h3>
-          <ul>
-            <li><a href="artic.html">Serengeti National Park</a></li>
-            <li><a href="Ngorongoro.html">Ngorongoro Crater</a></li>
-            <li><a href="Tarangire.html">Tarangire National Park</a></li>
-            <li><a href="lake.html">Lake Manyara</a></li>
-            <li><a href="saadani.html">Saadani National Park</a></li>
-            <li><a href="kat.html">Katavi National Park</a></li>
-            <li><a href="mahela.html">Mahela National Park</a></li>
-            <li><a href="Nyerere.html">Nyerere National Park</a></li>
-            <li><a href="Zanzibar.html">Zanzibar Island</a></li>
-          </ul>
+
+          <div class="footer-col">
+            <h3>QUICK LINKS</h3>
+            <ul>
+              <li><a href="page19.html">Top Safari Packages</a></li>
+              <li><a href="kilimanjaro.html">Mount Kilimanjaro Treks</a></li>
+              <li><a href="page1.html">Zanzibar Holidays</a></li>
+              <li><a href="travel.html">Travel Guide</a></li>
+              <li><a href="terms.html">Terms & Conditions</a></li>
+              <li><a href="refund.html">Payment and Refund policy</a></li>
+              <li><a href="faqs.html">FAQs</a></li>
+            </ul>
+          </div>
         </div>
-
-        <div class="footer-col">
-          <h3>QUICK LINKS</h3>
-          <ul>
-            <li><a href="page19.html">Top Safari Packages</a></li>
-            <li><a href="kilimanjaro.html">Mount Kilimanjaro Treks</a></li>
-            <li><a href="page1.html">Zanzibar Holidays</a></li>
-            <li><a href="travel.html">Travel Guide</a></li>
-            <li><a href="terms.html">Terms & Conditions</a></li>
-            <li><a href="refund.html">Payment and Refund policy</a></li>
-            <li><a href="faqs.html">FAQs</a></li>
-          </ul>
-        </div>
-
         <div class="footer-col">
           <h3>CONTACT US</h3>
           <p>
