--- a/artic.html
+++ b/artic.html
@@ -27,8 +27,6 @@
           <span></span>
           <span></span>
         </div>
-
-
         <div id="nav-part2">
           <h4><a href="index.html">HOME</a></h4>
           <h4><a href="ourstory.html">OUR STORY</a></h4>
@@ -36,7 +34,7 @@
           <h4><a href="destination.html">DESTINATIONS</a></h4>
           <h4><a href="about.html">ABOUT US</a></h4>
           <h4><a href="contact.html">CONTACT US</a></h4>
-           <a href="tailor made safari.html" class="btn-top">TAILOR MADE SAFARIS</a>
+          <a href="tailor made safari.html" class="btn-top">TAILOR MADE SAFARIS</a>
         </div>
       </nav>
 
@@ -59,8 +57,6 @@
       </p>
     </div>
   </section>
-
-   </section>
         <div id="page10">
             <h1>CHOOSE WHERE U GO!</h1>
         </div>
@@ -102,10 +98,7 @@
         <p>It is home to the Great Migration and boasts vast, open plains teeming with wildlife like lions, cheetahs, and elephants.</p>
       </details>
     </div>
-
-
-
-    <div class="faq-images">
+ <div class="faq-images">
       <img src="https://images.unsplash.com/photo-1580687774725-4e23db308efc?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8c2VyZW5nZXRpJTIwbGFuZHNjYXBlfGVufDB8fDB8fHww " alt="Serengeti Landscape">
       <img src="https://media.gettyimages.com/id/143922295/photo/serengeti-africa-sunset-behind-trees-and-a-safari-vehicle.jpg?s=612x612&w=0&k=20&c=bW4kDWTBRXxq2IWp_3Qtas5PT4DdedPSG4EcetPMi5I=" alt="Serengeti Sunset">
     </div>
@@ -159,18 +152,16 @@
     </div>
 
     <div class="activity">
-      <img src="https://images.unsplash.com/photo-1584392717238-3dd211f69b9d?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fFNlcmVuZ2V0aSUyME5hdGlvbmFsJTIwUGFyayUyMGxlcG9yZHxlbnwwfHwwfHx8MA%3D%3D" alt="Photography Expeditions">
+      <img src="https://images.unsplash.com/photo-1584392717238-3dd211f69b9d?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fFNlcmVuZ2V0aSUyME5hdGlvbmFsJTIwUGFyayUyMGxlcG9yZHxlbnwwfHwwfHx8MA%3D%3D"alt="Photography Expeditions">
       <div class="content">
         <h3>Photography Expeditions</h3>
         <p>Capture Tanzania’s iconic landscapes and wildlife with guided tours designed for shutterbugs, offering prime vantage points and expert tips.</p>
       </div>
     </div>
   </section>
-
-   </section>
  
         <section class="about">
-      <h2>Explore Africa’s Most Iconic Safari Destination with </br>Precious Moments Safari</h2>
+      <h2>Explore Africa’s Most Iconic Safari Destination with <br>Precious Moments Safari</h2>
     <h3>Most popular animals found in Serengeti National Park:</h3>
          <p>Serengeti is famous around the globe owing to the wildlife it possesses and the amazing Great Migration which occurs annually. This national park shelters hosts one of the animal kingdoms spectacles, “The Big Five”, consisting of lions, leopards, buffalo, rhinos and elephants, along with vast rivalring species. Great numbers of zebras, changers, and crocs are preyed on by hyenas, leopards, and cheetas.
 
